--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^1.8.4",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.14",
+    "path-to-regexp": "^8.2.0",
+    "sqlite3": "^5.1.7",
     "tlbs-map-vue": "^1.3.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
@@ -29,6 +31,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
+    "express": "^5.1.0",
+    "http-proxy-middleware": "^3.0.5",
     "lint-staged": "^11.1.2",
     "prettier": "^2.4.1",
     "vue-template-compiler": "^2.6.14"
