feat(热力图): 添加热力图数据获取及展示功能
- 在store中新增SET_HEAT_DATA mutation和fetchDensityData action，用于获取和设置热力图数据
- 修改DensityView.vue，优化表单布局并添加热力图值统计功能
- 更新NavMenu.vue菜单项，添加图标以提升用户体验
- 调整.eslintignore文件，确保代码风格一致性

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,4 +1,5 @@
-src/components/MapContainer.vue
 sre/store
 src/views/AreaSearchView.vue
+src/views/DensityView.vue
 src/components/SelectRectangle.vue
+src/components/MapContainer.vue
