--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.8.4",
     "core-js": "^3.8.3",
+    "echarts": "^5.6.0",
     "element-ui": "^2.15.14",
     "path-to-regexp": "^8.2.0",
     "sqlite3": "^5.1.7",
